--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
+  "scrips": {
+    "start": "nodemon index.js"
+  },
   "engines": {
     "node": "v11.13.0"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
